src/z80asm/z80asm2/t/25-hla/expected/repeat_01.txt
% z88dk-z80asm -v -dump-after-hla-expansion t/25-hla//input/repeat_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/25-hla/input/repeat_01.asm...
t/25-hla/input/repeat_01.asm:1:9: error: Unexpected token: "extra"
    %repeat extra
            ^
t/25-hla/input/repeat_01.asm:4:7: error: Unexpected token in condition: "\n"
    %until
          ^
t/25-hla/input/repeat_01.asm:7:6: error: Expected register after DJNZ
    %djnz
         ^
t/25-hla/input/repeat_01.asm:10:13: error: Unexpected token: "extra"
    %until true extra
                ^
t/25-hla/input/repeat_01.asm:13:7: error: Invalid register for DJNZ
    %djnz z
          ^
t/25-hla/input/repeat_01.asm:16:7: error: Invalid register for DJNZ
    %djnz ix
          ^
t/25-hla/input/repeat_01.asm:19:9: error: Unexpected token: "extra"
    %djnz a extra
            ^
t/25-hla/input/repeat_01.asm:21:2: error: Unclosed HLA construct REPEAT
    %repeat
     ^
